feat: added agreement PUT
